--- a/couchbase-cluster.yaml
+++ b/couchbase-cluster.yaml
@@ -1,27 +1,55 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: cb-example-auth
+  name: castbox-cb-bj-auth
 type: Opaque
 data:
   username: QWRtaW5pc3RyYXRvcg== # Administrator
   password: cGFzc3dvcmQ=         # password
----
-apiVersion: couchbase.com/v2
-kind: CouchbaseBucket
-metadata:
-  name: default
+#---
+#apiVersion: couchbase.com/v2
+#kind: CouchbaseBucket
+#metadata:
+#  name: default
 ---
 apiVersion: couchbase.com/v2
 kind: CouchbaseCluster
 metadata:
-  name: cb-example
+  name: castbox-cb-bj
 spec:
-  image: couchbase/server:7.1.3
+  image: couchbase/server:enterprise-7.1.4
   security:
-    adminSecret: cb-example-auth
+    adminSecret: castbox-cb-bj-auth
   buckets:
-    managed: true
+    managed: false
+  cluster:
+    analyticsServiceMemoryQuota: 1Gi
+    autoCompaction:
+      databaseFragmentationThreshold:
+        percent: 30
+      timeWindow:
+        abortCompactionOutsideWindow: false
+      tombstonePurgeInterval: 72h0m0s
+      viewFragmentationThreshold:
+        percent: 30
+    autoFailoverMaxCount: 3
+    autoFailoverOnDataDiskIssuesTimePeriod: 2m0s
+    autoFailoverTimeout: 2m0s
+    dataServiceMemoryQuota: 512Mi
+    eventingServiceMemoryQuota: 256Mi
+    indexServiceMemoryQuota: 512Mi
+    indexStorageSetting: memory_optimized
+    searchServiceMemoryQuota: 256Mi
+  networking:
+    exposeAdminConsole: true 
+    adminConsoleServiceTemplate:
+      spec:
+        type: NodePort
+    exposedFeatures: 
+    - client
+    exposedFeatureServiceTemplate:
+      spec:
+        type: NodePort
   servers:
   - size: 3
     name: all_services
@@ -32,3 +60,14 @@ spec:
     - search
     - eventing
     - analytics
+    volumeMounts:
+      default: couchbase 
+  enableOnlineVolumeExpansion: true
+  volumeClaimTemplates: 
+  - metadata:
+      name: couchbase
+    spec:
+      storageClassName: local-path 
+      resources: 
+        requests:
+          storage: 1Gi
